--- a/webapp/reusableUiComponents/thousandSeparatedIntegerInput.less
+++ b/webapp/reusableUiComponents/thousandSeparatedIntegerInput.less
@@ -1,8 +1,8 @@
 .tsii__readonly-view {
   position: absolute;
-  right: 5px;
-  top: 9px;
-  height: 17px;
+  right: 10px;
+  top: 10px;
+  height: 20px;
   overflow: hidden;
   text-overflow: ellipsis;
   text-align: right;
